// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suite should collect stats 1`] = `
Object {
  "done": 0,
  "failed": 0,
  "passed": 0,
  "pending": 4,
  "running": 0,
  "skipped": 0,
  "time": Any<Number>,
  "todo": 0,
  "total": 4,
}
`;

exports[`Suite should collect stats 2`] = `
Object {
  "done": 4,
  "failed": 1,
  "passed": 1,
  "pending": 0,
  "running": 0,
  "skipped": 1,
  "time": Any<Number>,
  "todo": 1,
  "total": 4,
}
`;

exports[`Suite should fail and collect messages 1`] = `
Result {
  "internalMessages": Array [
    "desc: FAIL!",
  ],
  "internalStatus": "failed",
}
`;

exports[`Suite should pass and collect messages 1`] = `
Result {
  "internalMessages": Array [
    "desc: OK",
  ],
  "internalStatus": "passed",
}
`;
